app/assets/stylesheets/layout.css.scss
@import 'colors';

body {
  padding-top: 70px;
}

a .caret {
  margin-left: 10px;
}

a > img {
  margin-right: 5px;
}

.form-horizontal .form-group {
  margin-left: 0;
  margin-right: 0;
}

/* Sign Up Toggle Form */

#log-in,
#sign-up {
  margin-top: -20px;
  margin-bottom: 20px;
  background-color: lighten($dark-gray, 3%);
  color: #fff;

  > .container {
    padding-top: 16px;
    padding-bottom: 16px;
  }

  .popover {
    color: #333;
  }
}

.upcase {
  text-transform: uppercase;
  font-weight: 700;
}

.jumbotron.front-page {
  margin-top: -20px;
  text-align: center;
}

.jumbotron.front-page h1.logo {
  font-size: 72pt;
  font-weight: 700;
  letter-spacing: -4px;
  margin: 0 auto 24px;
}

.jumbotron.front-page p + p {
  line-height: 0.8em;
  margin-bottom: 2em;
}

@media (max-width: 991px) {
  /* Do not remove - disables zooming on focus on mobile phones */
  input:not([type=submit]):not([type=file]),
  textarea {
    font-size:16px;
  };
}

@media (min-width: 992px) {
  .manage-sidebar.affix-bottom,
  .manage-sidebar.affix {
    width: 212px;
  }
}

@media (min-width: 1200px) {
  .manage-sidebar.affix-bottom,
  .manage-sidebar.affix {
    width: 262px;
  }
}

.manage-sidebar {
  .panel {
    .panel-heading {
      .progress {
        height: 20px;
        margin-bottom: 2px;
      }

      .funded-label {
        font-size: 10px;
        text-transform: uppercase;
        text-align: center;
        line-height: 10px;
        margin-bottom: 10px;

        .goal-text {
          margin-top: 3px
        }
      }

      .status-strip {
        border-top: 1px solid rgba(0,0,0,0.05);
        padding: 5px 10px 0;

        .col-xs-4 {
          padding-right: 5px;
          padding-left: 5px;
        }
      }

      .quantity {
        font-weight: 700;
        font-size: 18px;
        margin-bottom: -5px;
      }
      .status-label {
        font-size: 10px;
        text-transform: uppercase;
      }

    }
  }
}

#course-dropdown {
  > li > a.dropdown-toggle {
    text-align: left;
    vertical-align: middle;
    padding: 7px 12px 5px;
    min-height: 50px;

    > .no-course {
      padding: 9px 0;
      display: inline-block;
    }

    > .course-info + .caret {
      margin-bottom: 15px;
    }
  }

  .course-info {
    text-align: left;
    display: inline-block;

    .course-title {
      margin-bottom: -3px;
    }

    .course-date {
      font-size: 85%;
    }
  }
}

#settings-menu {
  > li > a.dropdown-toggle {
    padding: 10px 12px;

    > img {
      height: 30px;
    }
  }
}

.table td.border-top {
  border-top: 1px solid #000;
}

.email-all-link {
  margin-top: 20px;
}

#footer {
  margin-top: 40px;
  padding-bottom: 100px;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none;
}

